test/negative/error3_bad_enum.drift
monitor BadTime {
    source: s
    baseline: b
    drift_check every 5_seconds { // "seconds" nem létezik a nyelvben
        method: psi
        threshold: 0.1
        alert: slack
    }
}